[package]
edition = "2021"
name = "k0michi_now"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = ["napi6"] }
napi-derive = "2.9.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
